middleware and authentication service added

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "secretKeyWhichShouldBePassed"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=datingapp.db"
   },
