third parties for angular added (ngx bootstrap, Token, bootswatch, alertify)

--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -19,8 +19,14 @@
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
+    "@auth0/angular-jwt": "^4.0.0",
+    "@types/jest": "^25.1.4",
+    "@types/mocha": "^7.0.2",
+    "alertifyjs": "^1.13.1",
     "bootstrap": "^4.4.1",
+    "bootswatch": "^4.4.1",
     "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^5.5.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
