User interface added. Data retrieved from API.

--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
     "@auth0/angular-jwt": "^4.0.0",
+    "@kolkov/ngx-gallery": "^1.0.11",
     "@types/jest": "^25.1.4",
     "@types/mocha": "^7.0.2",
     "alertifyjs": "^1.13.1",
